# coursework_4

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
src/: constants.py
src/abstractions/: __init__.py  currency_provider.py  http_request_provider.py  serializable.py  vacancy_provider.py  vacancy_serializer.py
src/entities/: __init__.py  currency.py  salary.py  vacancy.py
src/providers/: __init__.py  base_http_request_provider.py  currency_provider_cbr.py  http_request_provider_base.py  vacancy_composer.py  vacancy_provider_head_hunter.py  vacancy_provider_superjob.py
src/serializers/: __init__.py  json_vacancy_serializer.py
tests/: conftest.py
tests/data/: head_hunter_vacancy_response.json  superjob_vacancy_response.json
tests/test_entities/: test_currency.py  test_salary.py  test_vacancy.py
tests/test_providers/: test_currency_provider_cbr.py  test_vacancy_provider_head_hunter.py  test_vacancy_provider_superjob.py
tests/test_serializers/: test_json_vacancy_serializer.py
tests/utils/: mock_currency_http_request_provider.py  mock_vacancy_provider_hh.py  mock_vacancy_provider_sj.py
